force-app/main/default/objects/LLC_BI__Covenant__c/fields/LLC_BI__Active__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This defaults to false. Active indicator for the covenant</description>
    <inlineHelpText>Is this Covenant Active?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>