force-app/main/default/objects/LLC_BI__Covenant__c/fields/LLC_BI__Contact__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is manually populated. The (optional) contact that this Covenant relates to.</description>
    <inlineHelpText>Contact to which this Covenant applies.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Covenants</relationshipLabel>
    <relationshipName>Covenants</relationshipName>
    <type>Lookup</type>
</CustomField>