force-app/main/default/objects/LLC_BI__Covenant__c/fields/LLC_BI__Covenant_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Covenant_Sub_Type__c</fullName>
    <description>Deprecated; use Covenant_Type_Reference__c</description>
    <label>-D Covenant Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LLC_BI__Covenant_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Tax Returns</fullName>
            </value>
            <value>
                <fullName>Personal Financial Statement</fullName>
            </value>
            <value>
                <fullName>Business Financial Statement</fullName>
            </value>
            <value>
                <fullName>Lease Information</fullName>
            </value>
            <value>
                <fullName>Debt Service Coverage of Borrower</fullName>
            </value>
            <value>
                <fullName>Debt Service Coverage with and without Distributions</fullName>
            </value>
            <value>
                <fullName>Global Debt Service Coverage</fullName>
            </value>
            <value>
                <fullName>Minimum Working Capital Ratio</fullName>
            </value>
            <value>
                <fullName>Maximum Debt to Worth</fullName>
            </value>
            <value>
                <fullName>Accounts Payable</fullName>
            </value>
            <value>
                <fullName>Key Man Life Insurance</fullName>
            </value>
            <value>
                <fullName>Maintain Accounts</fullName>
            </value>
            <value>
                <fullName>Minimum Liquidity</fullName>
            </value>
            <value>
                <fullName>Limiting Compensation</fullName>
            </value>
            <value>
                <fullName>Minimum Working Capital</fullName>
            </value>
            <value>
                <fullName>Minimum Current Ratio</fullName>
            </value>
            <value>
                <fullName>Minimum Times Interest Earned</fullName>
            </value>
            <value>
                <fullName>Fixed Asset Purchases</fullName>
            </value>
            <value>
                <fullName>Collateral Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>