force-app/main/default/objects/LLC_BI__Covenant__c/fields/LLC_BI__Covenant_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Covenant_Type__c</fullName>
    <description>Deprecated; use Covenant_Type_Reference__c</description>
    <label>-D Covenant Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financial Statement Requirements</fullName>
            </value>
            <value>
                <fullName>Financial Indicators</fullName>
            </value>
            <value>
                <fullName>Default Covenants</fullName>
            </value>
            <value>
                <fullName>Term Covenants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>