force-app/main/default/objects/LLC_BI__Covenant__c/fields/LLC_BI__Covenant_Type_Reference__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Covenant_Type_Reference__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is required. It is manually populated. It identifies the Covenant Type associated with the Covenant Record and is populated automatically when creating a new Covenant record.</description>
    <label>Covenant Type</label>
    <referenceTo>LLC_BI__Covenant_Type__c</referenceTo>
    <relationshipLabel>Covenants</relationshipLabel>
    <relationshipName>Covenants</relationshipName>
    <type>Lookup</type>
</CustomField>